fix main section video on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -287,11 +287,16 @@ section {
   clip-path: inset(1px 1px);
 }
 
+@media (max-width: 992px) {
+  .main-section-right-side #main-section-video {
+    width: 100%;
+  }
+}
+
 .main-section-right-side .video-wrapper {
   width: auto;
   height: 100%;
 }
-
 
 .scrolling-text {
   position: absolute;
